--- a/limited.html
+++ b/limited.html
@@ -13,7 +13,7 @@
         <header>
             <div class="header_in">
                 <h1>
-                    <a href="#">
+                    <a href="index.html">
                         <img src="./img/logo1.png" alt="logo">
                     </a>
                 </h1>
