--- a/index.html
+++ b/index.html
@@ -39,24 +39,25 @@
                     <div class="icon">
                         <a href="#"><img src="./img/serch.png" alt="검색"></a>
                         <a href="#"><img src="./img/glb.png" alt="언어선택"></a>
-                        <button><img src="./img/mdi_hamburger-menu.png" alt="햄버거버튼"></button>
+                        <a href="#" class="open"><img src="./img/mdi_hamburger-menu.png" alt="햄버거버튼"></a>
                     </div>
                 </nav>
                 
                 <!-- 서브 메뉴 -->
                 <div class="subNav">
                     <div class="subList">
-                        <a href="#" class="close"><img src="./img/close.png" alt="close" ></a>
+                        <a href="#" class="close">
+                            <img src="./img/close.png" alt="close" >
+                        </a>
                         <ul class="sub_menu">
                             <li><a href="#">Project</a></li>
                             <li><a href="artist.html">Artist</a></li>
                             <li><a href="#">Artwork</a></li>
                             <li><a href="#">About</a></li>
+                            <li class="sub"><a href="contact.html">Contact Us</a></li>
+                            <li class="sub"><a href="limited.html">Limited Edition</a></li>                          
                         </ul>
-                        <div class="sub">
-                           <li><a href="contact.html">Contact Us</a></li>
-                           <li><a href="limited.html">Limited Edition</a></li>
-                        </div>
+                        
                         <div class="glb">
                             <span>ENG</span><span>KOR</span>
                         </div>
@@ -224,6 +225,6 @@
 
     </div>
     <script src="./js/jquery-3.7.1.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
