--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 </h1>
                 <nav>
                     <ul>
-                        <li><a href="#">PROJECT</a></li>
-                        <li><a href="artist.html">ARTIST</a></li>
-                        <li><a href="#">ARTWORK</a></li>
-                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#" data-target="#section2" class="on">PROJECT</a></li>
+                        <li><a href="artist.html" data-target="#section3">ARTIST</a></li>
+                        <li><a href="#" data-target="#section4">ARTWORK</a></li>
+                        <li><a href="#" data-target="#section5">ABOUT</a></li>
                     </ul>
                     <div class="icon">
                         <a href="#"><img src="./img/serch.png" alt="검색"></a>
